--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "es6-promise": "^4.1.1",
     "form-data": "^2.3.1",
     "isomorphic-fetch": "^2.2.1",
+    "mkdirp": "^0.5.1",
     "twitter": "^1.7.1",
     "winston": "^2.3.1"
   }
