--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eric Egan",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "es6-promise": "^4.1.1",
     "form-data": "^2.3.1",
     "isomorphic-fetch": "^2.2.1",
